styles.css
/* Ensure layout starts exactly at the edges of the screen */
* {
    margin: 0%;
    padding: 0%;
    box-sizing: border-box;
}

/* Body genral rules*/
body{
    background-color: #212529;
    color: #ffffff;
    line-height: 1.6;
    font-family: 'Poppins', sans-serif;
}

/* Standard responsive containers for each section*/
.container{
    display: flex;
    flex-direction: column;
    margin: 0rem auto 2rem auto; 
    width: 90%;
    background-color: #323232;
    scroll-margin-top: 6rem; /* Buffer between toolbar to title*/
    padding: 2.5rem;
}

/* Toolbar*/
header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #393939;
    position: sticky;
    top: 0%;
    padding: 1% 5%;
    margin-bottom: 2rem;
}
/* Navigation links*/
nav{
    display: flex;
    gap: 15px;
    align-items: center;
}

/* General links style and layout*/
a{
    color: #ffffff;
    font-family: inherit;
    text-decoration: none;
    transition: 0.5s;

}
/* Links hover effect */
a:hover{
    color: #7048e8;
    transition: 0.5s;
}

/* Banner section layout and backgrond */
.banner{
    display: flex;
    justify-content: center;
    align-items: center;

    background-image: url("computerPurple.jpg");
    background-size: cover;
    background-position: center;

    width: 90%;
    height: 350px;
    margin: 0% auto;
    margin-bottom: 2rem;
}
/* Content on the banner background */
.banner-content{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

/* Table lable*/
thead{
    background-color: #7048e8;
}

/* Project Links */
.project{
    background-color: #616161;
}

/* Form Input Box */
input{
    background-color: #616161;
    font-family: inherit;
}

/* Form Submit Button */
#submit{
    color:#ffffff;
    background-color: #7048e8;
    font-family: inherit;
    transition: 0.5s;
    cursor: pointer;
}

#submit:hover{
    color:#5f3cd4;
    transition: 0.5s;
}

/* Copyright */
footer{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 1% 0%;
    margin-top: 2rem;
    background-color: #393939;
}

